--- a/main.html
+++ b/main.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <!-- the entire body must be written by the student -->
+
+    <h1>Ritesh's Dog Adoption Page</h1>
+
+    <ul>
+        <!-- Golden Retriever -->
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
+                <img src="img link for Golden Retriever" alt="Golden Retriever Image">
+            </a>
+        </li>
+
+        <!-- Poodle -->
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
+                <img src="img link for Poodle" alt="Poodle Image">
+            </a>
+        </li>
+    </ul>
+
+    <!-- Include the script.js file -->
+    <script type="text/javascript" src="./script.js"></script>
 
 </body>
 
